WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25491
WebFrame leak when a subframe removes itself
https://bugs.webkit.org/show_bug.cgi?id=25491
Summary
WebFrame leak when a subframe removes itself
Darin Adler
Reported
2009-04-30 13:15:10 PDT
Steps to reproduce: 1. Download attached main.html and subframe.html. 2. Open main.html is a debug Safari build. 3. Close it. Results: an alert says that a WebFrame leaked.
Attachments
main document
(53 bytes, text/html)
2009-04-30 13:22 PDT
,
Darin Adler
no flags
Details
subframe
(103 bytes, text/html)
2009-04-30 13:23 PDT
,
Darin Adler
no flags
Details
patch
(6.65 KB, patch)
2009-04-30 13:23 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2009-04-30 13:15:33 PDT
<
rdar://problem/6833859
>
Darin Adler
Comment 2
2009-04-30 13:22:55 PDT
Created
attachment 29916
[details]
main document
Darin Adler
Comment 3
2009-04-30 13:23:07 PDT
Created
attachment 29917
[details]
subframe
Darin Adler
Comment 4
2009-04-30 13:23:24 PDT
Created
attachment 29918
[details]
patch
Brady Eidson
Comment 5
2009-04-30 15:59:19 PDT
Comment on
attachment 29918
[details]
patch As with all FrameLoader voodoo, I'm not 100% sure on this one - but it seems quite safe and reasonable, and fixes the bug. I think it's a shame the FrameLoadDelegate dumping that DRT does doesn't make an effort to dump the error for didFailLoadWithError, but that enhancement is outside the scope of this patch. r+
Darin Adler
Comment 6
2009-04-30 17:07:51 PDT
http://trac.webkit.org/changeset/43106
Alexey Proskuryakov
Comment 7
2009-04-30 23:52:19 PDT
This was rolled out in
r43107
, because of layout tests failing on build bots: <
http://build.webkit.org/results/Tiger%20Intel%20Release/r43106%20(711)/results.html
> <
http://build.webkit.org/results/Leopard%20Intel%20Release%20(Tests)/r43106%20(795)/results.html
> <
http://build.webkit.org/results/Windows%20Release%20(Tests)/r43106%20(603)/results.html
>
Darin Adler
Comment 8
2009-05-02 11:51:44 PDT
Comment on
attachment 29918
[details]
patch Clearing review flag since this caused regression test failures.
Darin Adler
Comment 9
2009-05-02 12:59:31 PDT
http://trac.webkit.org/changeset/43148
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug