WebCore:

2009-04-30  Darin Adler  <darin@apple.com>

        Reviewed by Brady Eidson.

        Bug 25491: WebFrame leak when a subframe removes itself
        https://bugs.webkit.org/show_bug.cgi?id=25491
        rdar://problem/6833859

        Test: fast/loading/subframe-removes-itself.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::checkLoadCompleteForThisFrame): When isStopping is true,
        treat load as complete, even if isLoadingInAPISense is still returning true.

LayoutTests:

2009-04-30  Darin Adler  <darin@apple.com>

        Reviewed by Brady Eidson.

        Bug 25491: WebFrame leak when a subframe removes itself
        https://bugs.webkit.org/show_bug.cgi?id=25491
        rdar://problem/6833859

        * fast/loading: Added.
        * fast/loading/resources: Added.
        * fast/loading/resources/subframe-that-removes-itself.html: Added.
        * fast/loading/subframe-removes-itself-expected.txt: Added.
        * fast/loading/subframe-removes-itself.html: Added.

        * platform/gtk/Skipped: Skip loading tests.



Canonical link: https://commits.webkit.org/35143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43106 268f45cc-cd09-0410-ab3c-d52691b4dbfc